# PageFinder

./: README_OPTIMIZATION.md  analyze_table_results.py  benchmark_performance.py  benchmark_results.json  config_loader.py  debug_metadata.py  debug_search.py  demo_table_detector.py  element_search_core.py  export_lmdb_to_excel.py  find_tables.py  fuzzy_search_core.py  lmdb_document_store.py  notebook_v2.ipynb  pretty_print_results.py  process_pdfs_to_lmdb.py  process_pdfs_to_lmdb_incremental.py  process_pdfs_to_lmdb_optimized.py  processing_config.json  pyproject.toml  quick_lmdb_view.py  quick_start.py  requirements.txt  table_definitions.json  table_detector.py  test_element_search.py  test_error_rate_fix.py  test_fuzzy_search.py  test_incremental_behavior.py  test_lmdb_contents.py  test_optimizations.py  test_rich_simple.py  test_table_detector.py  text_preprocessing.py  text_preprocessing_optimized.py
test_debug.lmdb/: lock.mdb
