[project]
name = "pagefinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attrs>=25.3.0",
    "fitz>=0.0.1.dev2",
    "ipykernel>=6.30.1",
    "pymupdf>=1.26.4",
    "pytesseract>=0.3.13",
    "rapidfuzz>=3.13.0",
]
