[project]
name = "pagefinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attrs>=25.3.0",
    "fitz>=0.0.1.dev2",
    "ipykernel>=6.30.1",
    "lmdb>=1.7.3",
    "openpyxl>=3.1.5",
    "pymupdf>=1.26.4",
    "pytesseract>=0.3.13",
    "rapidfuzz>=3.13.0",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
]
